src/test/ui/suggestions/suggest-impl-trait-lifetime.stderr
error[E0310]: the parameter type `impl Debug` may not live long enough
  --> $DIR/suggest-impl-trait-lifetime.rs:7:5
   |
LL | fn foo(d: impl Debug) {
   |           ---------- help: consider adding an explicit lifetime bound...: `impl Debug + 'static`
LL |
LL |     bar(d);
   |     ^^^ ...so that the type `impl Debug` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/suggest-impl-trait-lifetime.rs:12:24
   |
LL | fn bar(d: impl Debug + 'static) {
   |                        ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
